--- a/src/views/login/login.css
+++ b/src/views/login/login.css
@@ -1,11 +1,9 @@
 .container_login_view{
-    width: 80%;
-    padding: 0vh 10%;
-    padding-top:15vh;
-    padding-bottom:5vh;
-    min-height:80vh;
+    width: 100%;
+    min-height:100vh;
     background-color: #F2F0F0;
     display:flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
