--- a/src/views/profile/profile.css
+++ b/src/views/profile/profile.css
@@ -1,6 +1,5 @@
 .container_profile_view{
-    padding: 0vh 10%;
-    padding-top:15vh;
+    width: 100%;
     padding-bottom:5vh;
     min-height:80vh;
     background-color: #F2F0F0;
