--- a/src/components/book/book.css
+++ b/src/components/book/book.css
@@ -1,7 +1,7 @@
 .container_book {
    display: flex;
    flex-direction: column;
-   max-width: 180px;
+   max-width: 220px;
 }
 .container_image {
    background: url(image.png);
@@ -13,11 +13,12 @@
    border-radius: 0.5rem;
    cursor: pointer;
    transition: 0.3s;
+   aspect-ratio: 3/4.5;
    transition: 0.3s ease-in-out;
 }
 .image:hover{
    transition: 0.3s ease-in-out;
-   scale:1.05;
+   scale:1.02;
 }
 
 .image:active{
@@ -28,19 +29,22 @@
 .image {
    border-radius: 0.5rem;
    width: 100%;
+   height: 100%;
    object-fit: cover;
    user-select: none;
 }
 .title_book {
    font-weight: 500;
+   font-size: 1rem;
+   margin-top:1rem;
+
    padding: 0 0.2rem;
 }
-.container_footer_book {
-   padding: 0 0.2rem;
+.container_footer_book {   
    display: flex;
    justify-content: space-between;
    align-items: center;
-   height: 1.5rem;
+   height: 3rem;
 }
 .button_add{
    padding:0.5rem 1rem;
@@ -65,4 +69,9 @@
    scale:1;
    background-color:#222;
    color:white;
+}
+.price{
+   font-weight: 400;
+   font-size: 1rem;
+   margin:0;
 }
