--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,1 +1,8 @@
-
+.container_carousel {
+    filter: drop-shadow(0px 274px 110px rgba(0, 0, 0, 0.01))
+    drop-shadow(0px 154px 93px rgba(0, 0, 0, 0.05))
+    drop-shadow(0px 69px 69px rgba(0, 0, 0, 0.09))
+    drop-shadow(0px 17px 38px rgba(0, 0, 0, 0.1))
+    drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.1));
+ border-radius: 0.5rem;
+}
