--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,3 +6,22 @@
     display: flex;
     justify-content: center;
   }
+
+  img.imglogo {
+    width: 28%;
+}
+
+footer{
+  display:flex;
+  width: 100%;
+  height: 200px;
+}
+
+ul.list-inline.mb-0 {
+  font-size: xx-large;
+}
+
+.footer-texto{
+  font-weight: 400;
+
+}
